public class Season {
    int[] episodes;

    Season(int[] episodes) {
        this.episodes = episodes;
    }

    public int[] getEpisodes() {
        return episodes;
    }

    public void setEpisodes(int[] episodes) {
        this.episodes = episodes;
    }
}
