@startuml
'https://plantuml.com/sequence-diagram


!pragma layout smetana

class Main{
+ {static}static void main(String[] args)
}

class StreamingPlatform{
'attributes
- User currentUser
- TextUI ui
- FileIO io
- ArrayList<User> allUsers
- ArrayList<Media> allMedia

'methods
+ StreamingPlatform()
- ArrayList<Media> searchCategory(String category)
- Media searchName(String name)
- void startMenu()
- void registerUser()
- void userLogin(String userName, String password)
- void setupMedia ()
- void displaySavedMedia()
- void displayPlayedMedia()
- void playMovie(Movie movie)
- void playEpisode(Season season, int episode)
- void saveMedia(Media media)
- void removeMedia(Media media)
- void endSession()
}

class User {
 - int age
 - String userName
 - String password
 - ArrayList<Media> savedMedia
 - ArrayList<Media> playedMedia
 + User(int age, String userName, String password)
 - void addSavedMedia()
 - void addPlayedMedia()
 - void removeSavedMedia()
}

abstract class Media{
- String name
- String releaseYear
- Set<String> categories
- float rating
+ Media(String name, String releaseYear, Set<String> categories, float rating)
}

class Movie {
- String name
- String releaseYear
- Set<String> categories
- float rating
+ Movie(String name, String releaseYear, Set<String> categories, float rating)
}

class Series {
- String name
- String releaseYear
- Set<String> categories
- float rating
- ArrayList<Season> seasons
+ Series(String name, String releaseYear, Set<String> categories, float rating, ArrayList<Season> seasons)
}

class Season{
- int[] episodes
}

package "util" {
class TextUI {
 - Scanner scanner
 + void displayMsg(String s)
 + String promptText(String msg)
 + int promptNumeric(String msg)
}

class FileIO{
 - Scanner scanner
 - FileWriter fileWriter
 + ArrayList<String> readData(path)
 + void saveData(ArrayList<String> userData, String path)
}


Main *-- StreamingPlatform
StreamingPlatform *-- User
StreamingPlatform *-- Media
StreamingPlatform *-- TextUI
StreamingPlatform *-- FileIO
Series *-- Season

Media <|-- Series
Media <|-- Movie




@enduml